--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Hacker-Blog
+title: "Blog"
 description: "A Jekyll Blog Theme For Hackers"
-author:
-  name: "SomeHacker"
-  email: "someone@somewebsite.somedomain"
+author: "hyperloop11"
+  name: "hyperloop11"
+  email: "shirin.kaul11@gmail.com"
   url: "https://ashishchaudhary.in/hacker-blog"
 
 baseurl: /
@@ -28,5 +28,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
+owner : "hyperloop11"
 year : "2020"
