--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Blog"
 description: "A Jekyll Blog Theme For Hackers"
-author: "hyperloop11"
+author:
   name: "hyperloop11"
   email: "shirin.kaul11@gmail.com"
   url: "https://ashishchaudhary.in/hacker-blog"
